fixtures/errors/unsupported_scheme.hu
@use * from "https://example.com/foo.hu"
